--- a/src/styles/prism-theme.css
+++ b/src/styles/prism-theme.css
@@ -53,16 +53,11 @@ pre[class*="language-"] {
 /* Selection */
 code[class*="language-"]::-moz-selection,
 code[class*="language-"] *::-moz-selection,
-pre[class*="language-"] *::-moz-selection {
-	background: rgb(30, 41, 59);
-	color: inherit;
-	text-shadow: none;
-}
-
+pre[class*="language-"] *::-moz-selection,
 code[class*="language-"]::selection,
 code[class*="language-"] *::selection,
 pre[class*="language-"] *::selection {
-	background: rgb(30, 41, 59);
+	background: rgb(255, 202, 133);
 	color: inherit;
 	text-shadow: none;
 }
